syntax = "proto3";

package osu;

import "keys.proto";

message Beatmap {
  string artist_name = 1;
  string name = 2;
  string difficulty_name = 3;
  uint32 mapset_id = 4;
  uint64 map_id = 5;
  User creator = 6;
  Difficulty difficulty = 7;
}

message Difficulty {
  float stars = 1;
  uint32 length = 2;
  float bpm = 3;
  float cs = 4;
  float ar = 5;
  float od = 6;
  float hp = 7;
}

message User {
  uint32 user_id = 1;
  string username = 2;
  // 2-Character country code
  string country = 3;
  string cover_url = 4;
}
